<?xml version="1.0" encoding="UTF-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backg"
        android:scrollbars="vertical"
        android:tileMode="repeat"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/back_text"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/description"/>
    </LinearLayout>

    <TextView
        style="@style/Name_Text_Style"
        android:id="@id/textview1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_text"
        android:textColor="#ffffff"
        android:gravity="center"
        android:text="@string/app_name"
        />
    <!-- android:id="@+id/textView"-->
    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "200dp"
        android:layout_height = "175dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="70dp">
        <Button
            android:id="@+id/button_tests"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="0dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/button_rewrite_1"
            android:text="@string/go_testing"
            android:layout_width="200dp"
            android:layout_height="50dp" />

        <!-- android:onClick="onClick"-->
    </LinearLayout>
    <Button
        android:id="@+id/button_reitings"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dip"
        android:layout_marginTop="130dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/button_rewrite_1"
        android:text="@string/results"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/about_us"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dip"
        android:layout_marginTop="190dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/button_rewrite_1"
        android:text="@string/about_the_program"
        android:layout_height="50dp" />
    <Button
        android:id="@+id/button_go_out"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dip"
        android:layout_marginTop="250dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/button_rewrite_1"
        android:text="@string/go_out"
        android:layout_height="50dp" />

</FrameLayout>